# chess

./: .clang-format  .gitignore  CMakeLists.txt
gtr/: CMakeLists.txt  allocator.hpp  array.hpp  assert.hpp  container_base.hpp  math.hpp  nocopy.hpp  os.hpp  pair.hpp  profiler.hpp  recatangle.hpp  singleton.hpp  sprintf.hpp  string.hpp  tracking_allocator.hpp  utils.hpp  vec2.hpp  vector.hpp
gtr/tests/: CMakeLists.txt  string_test.cpp  vector_test.cpp
imgui/: CMakeLists.txt  imgui.h
src/: CMakeLists.txt  main.cpp
src/game/: CMakeLists.txt  ai.cpp  ai.hpp  analyzer.cpp  analyzer.hpp  bitboard.cpp  bitboard.hpp  board.cpp  board.hpp  board.hpp~  chess.cpp  chess.hpp  fen.cpp  fen.hpp  game.cpp  game.hpp  history.hpp  move.cpp  move.hpp  piece.hpp  player.cpp  player.hpp  position.hpp  random.hpp  types.hpp
src/renderer/: CMakeLists.txt  board_panel.cpp  board_panel.hpp  imconfig.h  imgui_extra.cpp  imgui_extra.hpp  imgui_main.cpp  main_panel.cpp  main_panel.hpp  main_window.cpp  main_window.hpp  primitives.hpp  profiler_window.cpp  profiler_window.hpp  visual_board.cpp  visual_board.hpp
src/third/: CMakeLists.txt
src/utils/: utils.hpp
